--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -104,124 +104,149 @@
                                         <span asp-validation-for="Telefono" class="text-danger"></span>
                                     </div>
                                 </div>
-
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-user-tag"></i></span>
-                                    </div>
-                                    <select class="form-control" name="Id_rol" asp-for="Id_rol" required>
-                                        <option value="">Seleccionar Rol</option>
-                                        @foreach (System.Data.DataRow row in ViewBag.Roles.Rows)
-                                        {
-                                            @if (Model.Id_rol == Convert.ToInt32(@row["id"]))
-                                            {
-                                                <option value="@row["id"]" selected>@row["nombre"]</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@row["id"]">@row["nombre"]</option>
-                                            }
-                                        }
-                                    </select>
-                                    <div class="input-group">
-                                        <span asp-validation-for="Id_rol" class="text-danger"></span>
-                                    </div>
-                                </div>
-
                             </div>
 
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-info float-right">Salvar Cambios</button>
+                                <button type="submit" class="btn btn-info float-right">Salvar Usuario</button>
                                 <button type="reset" class="btn btn-secondary">Resetear</button>
                             </div>
                         </form>
                     </div>
                 </div>
-
                 <div class="col-md-6">
-                    @if (permisos["usuarios"]["cambiar_password"] == true){
-                    <div class="card card-warning">
-                        <div class="card-header">
-                            <h3 class="card-title">Editar Contraseña</h3>
-                        </div>
-
-                        <form asp-action="UpdatePassword" asp-controller="Users" method="post">
-                            <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
-
-                            <div class="card-body">
-
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                    </div>
-                                    <input type="password" class="form-control" name="Password" asp-for="Password"
-                                        placeholder="Contraseña" required>
-                                    <input type="password" class="form-control" name="RepeatPassword"
-                                        asp-for="RepeatPassword" placeholder="Repetir Contraseña" required>
-
-                                    <div class="input-group">
-                                        <span asp-validation-for="Password" class="text-danger"></span>
-                                    </div>
-                                    <div class="input-group">
-                                        <span asp-validation-for="RepeatPassword" class="text-danger"></span>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="card-footer">
-                                <button type="submit" class="btn btn-warning float-right">Salvar Cambios</button>
-                                <button type="reset" class="btn btn-secondary">Limpiar</button>
-                            </div>
-                        </form>
-                    </div>
-                    }
-                    @if (permisos["usuarios"]["activar_desactivar"] == true)
+                    @if (permisos["usuarios"]["cambiar_password"] == true)
                     {
-                    <div class="card card-info">
-                        <div class="card-header">
-                            <h3 class="card-title">Editar Estado</h3>
-                        </div>
+                        <div class="card card-warning">
+                            <div class="card-header">
+                                <h3 class="card-title">Editar Contraseña</h3>
+                            </div>
 
-                        <form asp-action="UpdateEstado" asp-controller="Users" method="post">
-                            <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
+                            <form asp-action="UpdatePassword" asp-controller="Users" method="post">
+                                <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
 
-                            <div class="card-body">
+                                <div class="card-body">
 
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-user-check"></i></span>
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                        </div>
+                                        <input type="password" class="form-control" name="Password" asp-for="Password"
+                                            placeholder="Contraseña" required>
+                                        <input type="password" class="form-control" name="RepeatPassword"
+                                            asp-for="RepeatPassword" placeholder="Repetir Contraseña" required>
+
+                                        <div class="input-group">
+                                            <span asp-validation-for="Password" class="text-danger"></span>
+                                        </div>
+                                        <div class="input-group">
+                                            <span asp-validation-for="RepeatPassword" class="text-danger"></span>
+                                        </div>
                                     </div>
-                                    <select class="form-control" name="Id_estado" asp-for="Id_estado" required>
-                                        <option value="">Seleccionar Estado</option>
-                                        @foreach (System.Data.DataRow row in ViewBag.Estados.Rows)
-                                        {
-                                            @if (Model.Id_estado == Convert.ToInt32(@row["id"]))
-                                            {
-                                                <option value="@row["id"]" selected>@row["estado"]</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@row["id"]">@row["estado"]</option>
-                                            }
-                                        }
-                                    </select>
-                                    <div class="input-group">
-                                        <span asp-validation-for="Id_estado" class="text-danger"></span>
-                                    </div>
+
                                 </div>
 
-                            </div>
-
-                            <div class="card-footer">
-                                <button type="submit" class="btn btn-info float-right">Salvar Cambios</button>
-                                <button type="reset" class="btn btn-secondary">Resetear</button>
-                            </div>
-                        </form>
-                    </div>
+                                <div class="card-footer">
+                                    <button type="submit" class="btn btn-warning float-right">Salvar Contraseña</button>
+                                    <button type="reset" class="btn btn-secondary">Limpiar</button>
+                                </div>
+                            </form>
+                        </div>
                     }
-                </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            @if (permisos["usuarios"]["activar_desactivar"] == true)
+                            {
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Editar Estado</h3>
+                                    </div>
 
+                                    <form asp-action="UpdateEstado" asp-controller="Users" method="post">
+                                        <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
+
+                                        <div class="card-body">
+
+                                            <div class="input-group mb-3">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="fas fa-user-check"></i></span>
+                                                </div>
+                                                <select class="form-control" name="Id_estado" asp-for="Id_estado" required>
+                                                    <option value="">Seleccionar Estado</option>
+                                                    @foreach (System.Data.DataRow row in ViewBag.Estados.Rows)
+                                                    {
+                                                        @if (Model.Id_estado == Convert.ToInt32(@row["id"]))
+                                                        {
+                                                            <option value="@row["id"]" selected>@row["estado"]</option>
+                                                        }
+                                                        else
+                                                        {
+                                                            <option value="@row["id"]">@row["estado"]</option>
+                                                        }
+                                                    }
+                                                </select>
+                                                <div class="input-group">
+                                                    <span asp-validation-for="Id_estado" class="text-danger"></span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="card-footer">
+                                            <button type="submit" class="btn btn-info float-right">Salvar Estado</button>
+                                            <button type="reset" class="btn btn-secondary">Resetear</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            }
+                        </div>
+                        <div class="col-md-6">
+                            @if (permisos["usuarios"]["migrar_rol"] == true)
+                            {
+                                <div class="card card-info">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Editar Rol</h3>
+                                    </div>
+
+                                    <form asp-action="UpdateRol" asp-controller="Users" method="post">
+                                        <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
+
+                                        <div class="card-body">
+
+                                            <div class="input-group mb-3">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="fas fa-user-check"></i></span>
+                                                </div>
+                                                <select class="form-control" name="Id_rol" asp-for="Id_rol" required>
+                                                    <option value="">Seleccionar Rol</option>
+                                                    @foreach (System.Data.DataRow row in ViewBag.Roles.Rows)
+                                                    {
+                                                        @if (Model.Id_rol == Convert.ToInt32(@row["id"]))
+                                                        {
+                                                            <option value="@row["id"]" selected>@row["nombre"]</option>
+                                                        }
+                                                        else
+                                                        {
+                                                            <option value="@row["id"]">@row["nombre"]</option>
+                                                        }
+                                                    }
+                                                </select>
+                                                <div class="input-group">
+                                                    <span asp-validation-for="Id_rol" class="text-danger"></span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="card-footer">
+                                            <button type="submit" class="btn btn-info float-right">Salvar Rol</button>
+                                            <button type="reset" class="btn btn-secondary">Resetear</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
